--- a/Xamarin/Release-notes/v16.2.0.42.md
+++ b/Xamarin/Release-notes/v16.2.0.42.md
@@ -7,7 +7,7 @@ documentation: ug
 
 # Essential Studio for  Xamarin.Forms Release Notes
 
-{% include release-info.html date=site.releasedate.2018_vol_2  version="v16.2.0.42" %} 
+{% include release-info.html date=" June 29 ,2018" version="v16.2.0.42" %}  
 
 <style>
 #license {
