DOCINFRA-1908 added older release notes  MD files

--- a/Xamarin/Release-notes/v14.1.0.41.md
+++ b/Xamarin/Release-notes/v14.1.0.41.md
@@ -1,12 +1,14 @@
 ---
-title       : Essential Studio for  Xamarin.Forms 2016 volume 1Release Notes
-description : Essential Studio for  Xamarin.Forms 2016 volume 1Release Notes
-platform    : xamarin
+title: Essential Studio for  Xamarin.Forms  2016 Volume 1   Release Notes  
+description: Essential Studio for  Xamarin.Forms  2016 Volume 1   Release Notes  
+platform: xamarin
+documentation: ug
 ---
 
-# Essential Studio for  Xamarin.Forms Release Notes
+# Essential Studio for  Xamarin.Forms  Release Notes  
 
-{% include release-info.html date="April 05, 2016" version="v14.1.0.41" %} 
+{% include release-info.html date="April 5, 2016"  version="v14.1.0.41" %} 
+
 
 {% directory path: _includes/release-notes/v14.1.0.41 %}
 
