--- a/Xamarin/Release-notes/v14.2.0.26.md
+++ b/Xamarin/Release-notes/v14.2.0.26.md
@@ -1,12 +1,14 @@
 ---
-title       : Essential Studio for  Xamarin.Forms 2016 Vol 2 Release Notes
-description : Essential Studio for  Xamarin.Forms 2016 Vol 2 Release Notes
-platform    : xamarin
+title: Essential Studio for  Xamarin.Forms  2016 Volume 2   Release Notes  
+description: Essential Studio for  Xamarin.Forms  2016 Volume 2   Release Notes  
+platform: xamarin
+documentation: ug
 ---
 
-# Essential Studio for  Xamarin.Forms Release Notes
+# Essential Studio for  Xamarin.Forms  Release Notes  
 
-{% include release-info.html date="June 23, 2016" version="v14.2.0.26" %} 
+{% include release-info.html date="June 24, 2016"  version="v14.2.0.26" %} 
+
 
 {% directory path: _includes/release-notes/v14.2.0.26 %}
 
