SEO-181194-Xamarin.Forms-Realese-Notes-V17.10.38-Coverage-Issue

--- a/Xamarin/Release-notes/v17.1.0.38.md
+++ b/Xamarin/Release-notes/v17.1.0.38.md
@@ -1,6 +1,6 @@
 ---
 title: Essential Studio for Xamarin.Forms Nuget Release Notes
-description: Essential Studio for  Xamarin.Forms Weekly Nuget Release Release Notes  
+description: Learn here all about appearance support in Syncfusion control, it's elements and more.Essential Studio for  Xamarin.Forms Weekly Nuget Release Notes  
 platform: xamarin
 documentation: ug
 ---
