--- a/Xamarin/Release-notes/v27.1.58.md
+++ b/Xamarin/Release-notes/v27.1.58.md
@@ -1,13 +1,13 @@
 ---
-title: Essential Studio for  Xamarin.Forms Weekly Nuget Release Release Notes  
-description: Essential Studio for  Xamarin.Forms Weekly Nuget Release Release Notes  
+title: Essential Studio for  Xamarin.Forms 2024 Volume 3 SP Release Release Notes  
+description: Essential Studio for  Xamarin.Forms 2024 Volume 3 SP Release Release Notes  
 platform: xamarin
 documentation: ug
 ---
 
 # Essential Studio for  Xamarin.Forms  Release Notes  
 
-{% include release-info.html date="November 05, 2024"  version="v27.1.58" %} 
+{% include release-info.html date="November 13, 2024"  version="v27.1.58" %} 
 
 {% directory path: _includes/release-notes/v27.1.58 %}
 
