Added Trademark symbol.

--- a/Xamarin/Release-notes/v20.4.0.40.md
+++ b/Xamarin/Release-notes/v20.4.0.40.md
@@ -19,7 +19,7 @@ margin-top: 1.5em;     margin-bottom: 1.5em;
 </style>
 
 <div id="license">
-We have removed the Syncfusion Licensing NuGet package v20.4.0.40 from the nuget.org due to an issue with it. To resolve any compilation issues or warnings while using this, upgrade your Syncfusion NuGet packages version to v20.4.0.41 or later.
+We have removed the Syncfusion® Licensing NuGet package v20.4.0.40 from the nuget.org due to an issue with it. To resolve any compilation issues or warnings while using this, upgrade your Syncfusion® NuGet packages version to v20.4.0.41 or later.
 </div>
 
 
