--- a/Xamarin/Release-notes/v27.2.5.md
+++ b/Xamarin/Release-notes/v27.2.5.md
@@ -5,7 +5,7 @@ platform: xamarin
 documentation: ug
 ---
 
-# Essential Studio for  Xamarin.Forms  Release Notes  
+# Essential Studio® for  Xamarin.Forms  Release Notes  
 
 {% include release-info.html date="December 03, 2024"  version="v27.2.5" %} 
 
