--- a/Xamarin/Release-notes/v28.1.33.md
+++ b/Xamarin/Release-notes/v28.1.33.md
@@ -5,7 +5,7 @@ platform: xamarin
 documentation: ug
 ---
 
-# Essential Studio for  Xamarin.Forms  Release Notes  
+# Essential Studio® for  Xamarin.Forms  Release Notes  
 
 {% include release-info.html date="December 12, 2024"  version="v28.1.33" %} 
 
