--- a/Xamarin/Release-notes/v13.4.0.53.md
+++ b/Xamarin/Release-notes/v13.4.0.53.md
@@ -1,6 +1,6 @@
 ---
-title       : Essential Studio<sup>®</sup> 2015 Vol 4 Release Notes
-description : Essential Studio<sup>®</sup> 2015 Vol 4 Release Notes
+title       : Essential Studio® 2015 Vol 4 Release Notes
+description : Essential Studio® 2015 Vol 4 Release Notes
 platform    : xamarin
 ---
 
