--- a/Xamarin/Release-notes/v13.4.0.63.md
+++ b/Xamarin/Release-notes/v13.4.0.63.md
@@ -1,6 +1,6 @@
 ---
-title       : Essential Studio<sup>®</sup> for  Xamarin.Forms 2015 Vol 4 Service Pack 2 Release Notes
-description : Essential Studio<sup>®</sup> for Xamarin.Forms 2015 Vol 4 Service Pack 2 Release Notes
+title       : Essential Studio® for  Xamarin.Forms 2015 Vol 4 Service Pack 2 Release Notes
+description : Essential Studio® for Xamarin.Forms 2015 Vol 4 Service Pack 2 Release Notes
 platform    : xamarin
 ---
 
