--- a/Xamarin/Release-notes/v15.2.0.40.md
+++ b/Xamarin/Release-notes/v15.2.0.40.md
@@ -1,6 +1,6 @@
 ---
-title       : Essential Studio<sup>®</sup> for Xamarin.Forms 2017 Volume 2 Release Notes
-description : Essential Studio<sup>®</sup> for Xamarin.Forms 2017 Volume 2 Release Notes
+title       : Essential Studio® for Xamarin.Forms 2017 Volume 2 Release Notes
+description : Essential Studio® for Xamarin.Forms 2017 Volume 2 Release Notes
 platform    : xamarin
 ---
 
