--- a/Xamarin/Release-notes/v15.3.0.29.md
+++ b/Xamarin/Release-notes/v15.3.0.29.md
@@ -1,6 +1,6 @@
 ---
-title       : Essential Studio<sup>®</sup> for Xamarin.Forms 2017 Volume 3 Service Pack 1 Release Notes
-description : Essential Studio<sup>®</sup> for Xamarin.Forms 2017 Volume 3 Service Pack 1 Release Notes
+title       : Essential Studio® for Xamarin.Forms 2017 Volume 3 Service Pack 1 Release Notes
+description : Essential Studio® for Xamarin.Forms 2017 Volume 3 Service Pack 1 Release Notes
 platform    : xamarin
 ---
 
