--- a/Xamarin/Release-notes/v16.1.0.26.md
+++ b/Xamarin/Release-notes/v16.1.0.26.md
@@ -1,6 +1,6 @@
 ---
-title       : Essential Studio<sup>®</sup> for Xamarin.Forms 2018 volume 1 Refresh Release Notes
-description : Essential Studio<sup>®</sup> for Xamarin.Forms 2018 volume 1 Refresh Release Notes
+title       : Essential Studio® for Xamarin.Forms 2018 volume 1 Refresh Release Notes
+description : Essential Studio® for Xamarin.Forms 2018 volume 1 Refresh Release Notes
 platform    : xamarin
 ---
 
