--- a/Xamarin/Release-notes/v29.2.4.md
+++ b/Xamarin/Release-notes/v29.2.4.md
@@ -1,13 +1,13 @@
 ---
-title: Essential Studio for  Xamarin.Forms 2025 Volume 1 SP Release Release Notes  
-description: Essential Studio for  Xamarin.Forms 2025 Volume 1 SP Release Release Notes  
+title: Essential Studio for  Xamarin.Forms 2025 Volume 1 Service Pack Release Release Notes  
+description: Essential Studio for  Xamarin.Forms 2025 Volume 1 Service Pack Release Release Notes  
 platform: xamarin
 documentation: ug
 ---
 
 # Essential Studio for  Xamarin.Forms  Release Notes  
 
-{% include release-info.html date="May 15, 2025"  version="v29.2.4" %} 
+{% include release-info.html date="May 14, 2025"  version="v29.2.4" %} 
 
 {% directory path: _includes/release-notes/v29.2.4 %}
 
