--- a/Xamarin/Release-notes/v31.1.17.md
+++ b/Xamarin/Release-notes/v31.1.17.md
@@ -1,13 +1,13 @@
 ---
-title: Essential Studio for  Xamarin.Forms 2025 Volume 3 Main Release Release Notes   - v31.1.17
-description: Essential Studio for  Xamarin.Forms 2025 Volume 3 Main Release Release Notes   - v31.1.17
+title: Essential Studio® for  Xamarin.Forms Release Notes - v31.1.17
+description: Essential Studio® for  Xamarin.Forms 2025 Volume 3 Main Release Release Notes - v31.1.17
 platform: xamarin
 documentation: ug
 ---
 
-# Essential Studio for  Xamarin.Forms  Release Notes   - v31.1.17
+# Essential Studio® for  Xamarin.Forms  Release Notes - v31.1.17
 
-{% include release-info.html date="September 01, 2025 "  version="v31.1.17" %}
+{% include release-info.html date="September 01, 2025"  version="v31.1.17" %}
 
 {% directory path: _includes/release-notes/v31.1.17 %}
 
